<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingStart="20dp"
        android:paddingBottom="40dp"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back"
            android:layout_gravity="start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="28dp"
            android:layout_gravity="end"
            android:text="@string/settings"
            android:textSize="@dimen/text_22"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        style="@style/settings_menu"
        android:text="@string/dark_theme" />

    <TextView style="@style/settings_menu"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share"/>

    <TextView style="@style/settings_menu"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support"/>

    <TextView style="@style/settings_menu"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow_forward"/>

</LinearLayout>