<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textSize="@dimen/text_22"
        android:textColor="@color/white"
        android:paddingBottom="40dp"
        android:paddingTop="14dp"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/search"
        style="@style/main_menu_button"
        android:text="@string/search"
        app:icon="@drawable/search" />

    <Button
        android:id="@+id/media_library"
        style="@style/main_menu_button"
        android:text="@string/media_library"
        app:icon="@drawable/media_library" />

    <Button
        android:id="@+id/settings"
        style="@style/main_menu_button"
        android:text="@string/settings"
        app:icon="@drawable/settings" />

</LinearLayout>